--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ audio::-webkit-media-controls-time-remaining-display {
         </a>
     </div></div>
     <div class="last">
-        <p style="text-align: center;">Disclaimer | Terms & Conditions | Copyright ©️</p>
+        <p style="text-align: center;">Disclaimer | Copyright ©️ | Terms & Conditions </p>
     </div>
 </body>
 </html>
