--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ audio::-webkit-media-controls-time-remaining-display {
             </a>
             <p class="text" style="color: white;font-size:60px;">જ્ઞાનનો ઉજાસ આત્માનો આનંદ</p>
         </div>
-        <a href="https://drive.google.com/file/d/1HXtFnaJK4LDF8WgUokqhi0chJcekwpJI/view?usp=drivesdk" class="btn">
+        <a href="https://drive.google.com/drive/folders/16t-embvxP40uCoGOdipkzPNEQEEgulKM" class="btn">
             <i class="fa fa-download"></i> Download
         </a>
     </div>
