--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ audio::-webkit-media-controls-time-remaining-display {
 <body>
     <nav class="Tnav">
         <a href="2nd.html" class="anav">Author</a>
-    </nav><br><br><br><br><br><br>
+    </nav><br><br><br><br>
     <div class="logo">
         <img src="logo.jpg" width="1000" height="700">
     </div>
