--- a/index.html
+++ b/index.html
@@ -357,6 +357,20 @@ audio::-webkit-media-controls-time-remaining-display {
     <hr>
     <div class="Page hidden">
         <div class="Page">
+            <div class="translate">
+                <div class="translate">
+  <div id="google_translate_element"></div>
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+  </script>
+
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+</div>
+
             <h1 class="h1">Books</h1>
             <a href="https://drive.google.com/file/d/1HXtFnaJK4LDF8WgUokqhi0chJcekwpJI/view?usp=drivesdk">
                 <img src="book5.png" width="950" height="650" style="border: solid; color: maroon;">
