--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ audio::-webkit-media-controls-time-remaining-display {
             font-size: 60px;
             text-align: center;
             animation: fade-in 1s ease-in-out;
+            padding:20px;
         }
 
         /* Last Section Styling */
@@ -379,9 +380,10 @@ audio::-webkit-media-controls-time-remaining-display {
                 <p>પુરુષ પ્રધાન સમાજ મા નારીનું સ્થાન</p>
             </div>
             <br>
-            <div class="pi" style="padding: 10px;font-size:40px;">
-                પુરુષ પ્રધાન સમાજ મા નારીનું સ્થાન is a beautiful book written by Sudha Shah. She discusses the position of women in a male-dominated society, highlighting issues such as early marriage and motherhood, and the need for female empowerment. The piece reflects on cultural attitudes towards women, urging a shift towards respect and equality, and celebrating women’s achievements and potential.
-            </div>
+            <div class="pi" style="padding: 20px; font-size: 40px; line-height: 1.6;">
+    પુરુષ પ્રધાન સમાજ મા નારીનું સ્થાન is a beautiful book written by Sudha Shah. She discusses the position of women in a male-dominated society, highlighting issues such as early marriage and motherhood, and the need for female empowerment. The piece reflects on cultural attitudes towards women, urging a shift towards respect and equality, and celebrating women’s achievements and potential.
+</div>
+
             <br>
             <a href="https://drive.google.com/file/d/1HXtFnaJK4LDF8WgUokqhi0chJcekwpJI/view?usp=drivesdk" class="btn">
                 <i class="fa fa-download"></i> Download
@@ -395,7 +397,7 @@ audio::-webkit-media-controls-time-remaining-display {
             <a href="https://drive.google.com/drive/folders/16t-embvxP40uCoGOdipkzPNEQEEgulKM">
                 <img src="book2.png" width="600" height="500" style="border: solid; color: maroon;">
             </a>
-            <p class="text" style="color: white;font-size:60px;">જ્ઞાનનો ઉજાસ આત્માનો આનંદ</p>
+            <p class="text" style="color: white;padding:20px;font-size:60px;">જ્ઞાનનો ઉજાસ આત્માનો આનંદ</p>
         </div>
         <a href="https://drive.google.com/drive/folders/16t-embvxP40uCoGOdipkzPNEQEEgulKM" class="btn">
             <i class="fa fa-download"></i> Download
@@ -410,7 +412,7 @@ audio::-webkit-media-controls-time-remaining-display {
                 <div class="quotes">
                     <p>Muskurahat •ᴗ•</p>
                 </div>
-                <p style="color: black; font-weight: bold;font-size:50px;">
+                <p style="color:black; font-weight: bold;font-size:50px;padding:20px;">
                     जरा सी बात पर परेशान हो जाना, निराश हो जाना, रोना , उत्तेजित हो जाना, क्रोधांध स्थिति में आकर न कहने योग्य बात को कह जाना और न करने योग्य कार्य को कर जाना, यह सब मनुष्य की आंतरिक कमजोरी है। उत्तेजना और क्रोध में कहा गया शब्द और किया गया कर्म स्थिति को और बिगाड़ देता है। इसलिए मौन और मुस्कुराहट को अपना आभूषण बनाएं। संसार का चक्र ऐसे ही चलता रहेगा, मुस्कुराकर हर क्षण को स्वीकार करो।
                 </p>
             </div><br>
