--- a/index.html
+++ b/index.html
@@ -324,7 +324,10 @@ audio::-webkit-media-controls-time-remaining-display {
         font-size:40px;       
         text-align:center;
                  font-family:cursive;    }
+.boo{
+    padding:170px;
 
+}
     </style>
     <script>
         window.addEventListener('scroll', reveal);
@@ -395,7 +398,7 @@ audio::-webkit-media-controls-time-remaining-display {
         <div class="bk">
             <br>
             <a href="https://drive.google.com/drive/folders/16t-embvxP40uCoGOdipkzPNEQEEgulKM">
-                <img src="book2.png" width="600" height="500" style="border: solid; color: maroon;">
+                <img src="book2.png" width="600" height="500" style="border: solid; color: maroon;" class="boo">
             </a>
             <p class="text" style="color: white;padding:20px;font-size:60px;">જ્ઞાનનો ઉજાસ આત્માનો આનંદ</p>
         </div>
