--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
     <style>
+        .Dev{
+            Background-color:grey;
+            color:black;
+            padding:2px;
+        }
      /* Audio Player Styling */
 .audio-player {
     text-align: center;
@@ -449,5 +454,8 @@ audio::-webkit-media-controls-time-remaining-display {
     <div class="last">
         <p style="text-align: center;">Disclaimer | Copyright ©️ | Terms & Conditions </p>
     </div>
+        <div class="Dev">
+            <p>Developed by Dhruvi Panchal</p>
+        </div>
 </body>
 </html>
