--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             Background-color:grey;
             color:black;
             padding:2px;
+            text-align:center;
         }
      /* Audio Player Styling */
 .audio-player {
