--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ audio::-webkit-media-controls-time-remaining-display {
 
         /* Top Navigation Bar Styling */
         .Tnav {
-            background-color: #4eb8c4;
+            background-color:#AFEEEE;
             padding: 35px;
             color: #b7a8b7;
             overflow: hidden;
@@ -209,7 +209,7 @@ audio::-webkit-media-controls-time-remaining-display {
 
         /* Page Section Styling */
         .Page {
-            background-color: #4eb8c4;
+            background-color: #AFEEEE;
             border-radius: 10px;
             color: white;
             animation: emerge 1.5s ease-in-out;
@@ -242,7 +242,7 @@ audio::-webkit-media-controls-time-remaining-display {
 
         /* Quotes Section Styling */
         .quotes {
-            background-color: #4eb8c4;
+            background-color: #AFEEEE;
             font-size: 40px;
             color: white;
             text-align: center;
