--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@ audio::-webkit-media-controls-time-remaining-display {
     </div>
         <div class="Dev">
             <p>Developed by Dhruvi Panchal</p>
+        <p>Graphics by Darshana dalvi</p>
         </div>
 </body>
 </html>
